fix(ready-to-sell): fix overflow of blur image

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -59,4 +59,5 @@ body {
   font-size: 1.6rem;
   color: $black;
   line-height: 2.4rem;
+  overflow-x: hidden;
 }
